<resources>
    <string name="app_name">eBebewa App</string>
    <string name="form_empty_field">(Empty)</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_about_us">About Us</string>
    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles_driver">
        <item>Home</item>
        <item>Profile</item>
        <item>Available Jobs</item>
        <item>Settings</item>
    </string-array>
    <string-array name="nav_item_activity_titles_client">
        <item>Home</item>
        <item>Profile</item>
        <item>Post Delivery Job</item>
        <item>Delivery Job List</item>
        <item>Settings</item>
    </string-array>
    <string name="action_logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="action">Action</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="other">Other</string>
    <string name="my_profile">My profile</string>
    <string name="post_delivery_job">Post Delivery Job</string>
    <string name="available_jobs">Available Jobs</string>
    <string name="logged_as_client_text">Logged in as a client</string>
    <string name="logged_as_driver_text">Logged in as a driver</string>

    <string name="crop_image_menu_crop">Save</string>
    <string name="have_you_been_referred_by_an_agent">Have you been referred by an agent? Provide the agent ID. Leave this space blank if you have not been referred by an agent.</string>
    <string name="invite_users">Invite Users</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required</string>
    <string name="location_permission_denied">This app requires location permission. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Ebebewa App\'.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <string name="post_success">Success.\nYour luggage delivery job has been posted successfully. We shall notify you once a driver is available to pick the luggage.\n\nThank you for using Ebebewa.</string>

</resources>
